# classical-encoding

./: .gitignore  README.md  pyproject.toml
classical_encoding/: __init__.py  adaptive_huffman.py  naive_huffman.py  r_ans.py
classical_encoding/compression_pipeline/: -script-run-pipeline.py  classical_pipeline.py
classical_encoding/compression_pipeline/compression_metrics/: rate_distortion_plot.py
classical_encoding/compression_pipeline/prediction/: prediction.py
classical_encoding/compression_pipeline/test-result/: 20-60=metrics_20240123-134905.json  first20=metrics_20240123-132712.json
classical_encoding/encoder/: adaptive_huffman.py  naive_huffman.py
classical_encoding/entropy_coding/: adaptive_huffman.py  golomb_naive.py  naive_huffman.py
classical_encoding/helper/: basic_class.py  byte_tool.py  constant.py  data_class.py  data_structure.py  data_stucture.py  logger.py  more_math.py  test_util.py  tree.py  typing.py
classical_encoding/metrics/: print_metric.py  rate_distortion_plot.py
classical_encoding/prediction/: basic_prediction.py
classical_encoding/quantization/: uniform_scale_quantization.py
edge-case/: unknown.binary
tests/: prediction_test.py
tests/test_data/: img_0000.raw
