[tool.poetry]
name = "classical_encoding"
version = "0.1.0"
description = "Python implementation of classical encoding algorithm, primarily for educational purpose, not performant."
authors = ["PabloLION <36828324+PabloLION@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12"
rich = "^13.7.0"
pydot = "^1.4.2"
graphviz = "^0.20.1"
pytest = "^7.4.4"


[tool.poetry.group.dev.dependencies]
typing-extensions = "^4.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
